[tool.poetry]
name = "alex"
version = "0.1.0"
description = ""
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
blessed = "^1.19.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
coveralls = "^3.3.1"
nuitka = "^0.7.7"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
flake8 = "^6.0.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
