[project]
name = "alex"
version = "0.2.0"
description = "A sci-fi console game prototype using A* pathfinding and some modern asyncio best practices"
dependencies = [
    "blessed>=1.20.0",
    "toml>=0.10.2",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.9"

[tool.rye.scripts]
alex = { cmd = "python main.py" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.3",
    "coveralls>=3.3.1",
    "nuitka>=1.9.7",
    "flake8>=7.0.0",
    "yapf>=0.40.2",
    "pylint>=3.0.3",
    "ipython>=8.18.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/alex"]

[tool.yapf]
column_limit = 100
indent_dictionary_value = "True"
allow_split_before_dict_value = "False"

[tool.pytest.ini_options]
addopts = "--cov-branch --cov-report term"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["game"]

[tool.pylint]
max-line-length = 100
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "C0415", # (import-outside-toplevel)
    "R0401", # (cyclic-import)
    "R0902", # (too-many-instance-attributes)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "R0914", # (too-many-locals)
    "W0105", # (pointless-string-statement)
]
